<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ua.r4mstein.homepushups.MyTrainingActivity"
    tools:showIn="@layout/activity_my_trainig">

    <LinearLayout

        android:id="@+id/content_my_trainig"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:padding="12dp"
            android:text="@string/do_pushups"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/mt_program_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:background="@color/colorPrimary"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mt_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:background="@color/colorPrimary"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/mt_reps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="16sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/mt_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorPrimary"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <com.andexert.library.RippleView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="15dp"
            app:rv_zoom="true">

            <Button
                android:id="@+id/mt_reps_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:onClick="onClickRepsButton"
                android:padding="20dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </com.andexert.library.RippleView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/rest"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/mt_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="80sp"
            android:textStyle="bold"/>

        <com.andexert.library.RippleView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            app:rv_zoom="true">

            <Button
                android:id="@+id/mt_plus_seconds_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:onClick="onClickPlusSecondsButton"
                android:text="@string/_30_sec"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </com.andexert.library.RippleView>

        <com.andexert.library.RippleView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            app:rv_zoom="true">

            <Button
                android:id="@+id/mt_skip_pause_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:onClick="onClickSkip"
                android:text="@string/skip_the_pause"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </com.andexert.library.RippleView>

    </LinearLayout>

</ScrollView>
